Vadpacker 1.1
	* Improve --prefix option which allows to virtually change into a subfolder.
	* Selection of source uris via arbitrary shell commands.